docs: update cron schedule explanation and workflow

--- a/.github/workflows/weather-streaming.yml
+++ b/.github/workflows/weather-streaming.yml
@@ -3,8 +3,7 @@ name: Weather Data Streaming - Solo
 # Trigger workflow setiap 5 menit
 on:
     schedule:
-        - cron: "*/5 * * * *" # Every 5 minutes
-    # Allow manual trigger
+        - cron: "*/5 * * * *"
     workflow_dispatch:
 
 jobs:
